# comfyui-seedance

./: .gitignore  01_create_real_human_id.json  01_t2v_anyfast.json  01_t2v_fal.json  02_generate_with_existing_real_human_id.json  03_anyfast_first_frame.json  03_reuse_group_id_same_person.json  04_anyfast_reference_images.json  06_fal_reference_images.json  07_anyfast_human_id_with_ref_images.json  ANYFAST_ASSET_DEBUG_NOTES.txt  ANYFAST_SEPARATE_NODE_PLAN.txt  ANYFAST_SUPPORT_EMAIL_DRAFT.txt  CHANGELOG.md  FAL_REFERENCE_SETUP.txt  IMPLEMENTATION_REPORT_2026-04-28.md  README.md  SKILL_VIDEO_API_EXPERT.md  __init__.py  fal seedance.json  nodes.py  pyproject.toml  seedance_am_real_human_id_only_workflow.json  seedance_am_real_human_workflow.json  seedance_hybrid_official_id_our_generation.json  seedance_identity_input_demo_workflow.json  seedance_manual_asset_generation_workflow.json
examples/: 01_text_to_video.json  02_image_to_video.json  03_face_reference.json  03_face_to_video.json  03b_face_first_frame.json  04_reference_audio.json  05_reference_video.json  06_video_image_ref.json  07_video_audio_image_ref.json  08_extend_video.json  09_first_last_frame.json  10_face_audio_ref.json
skills/seedance-node-maintainer/: SKILL.md
web/js/: api_key.js  file_loaders.js  human_asset.js  human_asset_panel.js  image_batch.js
workflows/anyfast/: 01_t2v.json  02_human_id_existing.json  03_first_frame.json  04_reference_images.json  07_human_id_with_ref_images.json  08_anyfast_create_human_asset.json  09_anyfast_save_to_input_for_vhs.json  10_anyfast_video_audio_refs.json  11_anyfast_asset_first_frame.json
workflows/fal/: 01_t2v.json  05_image_to_video.json  06_reference_images.json
workflows/test/: test_01_t2v.json  (+5 more)
