[project]
name = "comfyui-seedance"
version = "0.1.2"
description = "Seedance AM nodes for ComfyUI with Seedance 2.0 generation, H5 human verification, and reference asset workflows"
license = {text = "Apache-2.0"}
dependencies = ["requests", "Pillow"]

[project.urls]
Repository = "https://github.com/amortegui84/comfyui-seedance"
Documentation = "https://github.com/amortegui84/comfyui-seedance#readme"

[tool.comfy]
PublisherId = "amortegui84"
DisplayName = "Seedance AM for ComfyUI"
Icon = ""
