[project]
name = "comfyui-seedance"
version = "0.1.3"
description = "Seedance AM nodes for ComfyUI with Seedance 2.0 generation, official ByteDance real-human ID workflow support, and reference asset workflows"
authors = [{name = "Aaron Ortega"}]
license = {text = "Apache-2.0"}
dependencies = ["requests", "Pillow"]

[project.urls]
Repository = "https://github.com/amortegui84/comfyui-seedance"
Documentation = "https://github.com/amortegui84/comfyui-seedance#readme"

[tool.comfy]
PublisherId = "amortegui84"
DisplayName = "Seedance AM for ComfyUI"
Icon = ""
