[project]
name = "comfyui-anyfast-seedance"
version = "0.2.0"
description = "Seedance AM nodes for ComfyUI — generate videos with ByteDance Seedance 2.0 powered by AnyFast"
authors = [{name = "Aaron Ortega"}]
license = {text = "Apache-2.0"}
dependencies = ["requests", "Pillow"]

[project.urls]
Repository = "https://github.com/amortegui84/comfyui-anyfast-seedance"
Documentation = "https://github.com/amortegui84/comfyui-anyfast-seedance#readme"

[tool.comfy]
PublisherId = "amortegui84"
DisplayName = "Seedance AM for ComfyUI"
Icon = ""
